Bug 372075 - cantor/python: application crash when calling quit()
Summary: cantor/python: application crash when calling quit()
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: python2-backend (other bugs)
Version First Reported In: 16.04
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-04 14:12 UTC by Erik Quaeghebeur
Modified: 2018-10-19 18:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12
Sentry Crash Report:


Attachments
backtrace (7.13 KB, text/plain)
2016-11-04 14:12 UTC, Erik Quaeghebeur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Quaeghebeur 2016-11-04 14:12:59 UTC
Created attachment 102030 [details]
backtrace

Using the python2 backend, when calling `quit()`, cantor crashes.

This repeats every time one is stupid enough to call quit().

(probably useless backtrace from DrKonqi in attachment)
Comment 1 Nikita Sirgienko 2018-10-19 18:13:18 UTC
Git commit 978af9a184bd7d26c0e982e57b05bd5a3f190784 by Nikita Sirgienko.
Committed on 19/10/2018 at 18:11.
Pushed by sirgienko into branch 'master'.

[Python] Disable 'exit' function
FIXED-IN: 18.12

M  +1    -0    src/backends/python/pythonserver.cpp

https://commits.kde.org/cantor/978af9a184bd7d26c0e982e57b05bd5a3f190784