[Python] Disable 'exit' function

BUG: 372075
FIXED-IN: 18.12